# openff-pdbmol

./: .codecov.yml  .gitattributes  .gitignore  .lgtm.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
devtools/conda-envs/: docs_env.yaml  test_env.yaml
docs/: Makefile  README.md  conf.py  index.md  make.bat
examples/: Untitled.ipynb  census.ipynb  load_pdb.ipynb  parquet_expt.ipynb  play.ipynb  protvar.ipynb  reencode.ipynb
fixed_pdbs/: all_pdb_ids_shuffled.txt
nautilus/: Dockerfile  env.yaml  pdbfix.py  pdbfix_sample_jm_pushbucket.yaml  pdbfix_sample_jm_pvc.yaml  pdbfix_sample_jm_redis.yaml  pdbfix_sample_jm_redisvol.yaml  pdbfix_sample_jm_worker.yaml  pdbfixargs.py  populate_queue.py  worker.py
openff/pdbscan/: __init__.py  __main__.py  _pdbscan.py  _version.py  mdanalysis.py  pdb.py  polars.py
openff/pdbscan/_tests/: conftest.py  test_pdbscan.py
openff/pdbscan/_tests/data/: files.py
openff/pdbscan/pdb/: __init__.py  _bond_definition.py  _pdb.py  _pdb_data.py  _pdb_molecule.py  _utils.py  ccd.py  exceptions.py  residue.py
