[build-system]
requires = [
  "setuptools >= 40.9.0",
  "versioneer[toml]==0.26",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "openff-pdbscan"
description = "Stats collection from the PDB databank."
license = { file = "LICENSE" }
authors = [
  { name = "Josh Mitchell", email = "josh.mitchell@openforcefield.org" },
]
maintainers = [
  { name = "Josh Mitchell", email = "josh.mitchell@openforcefield.org" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
keywords = [
  "molecular mechanics",
]
dynamic = [
  "version",
]

[project.optional-dependencies]
test = [
  "pytest>=6.0",
  "pytest-xdist>=2.5",
  "pytest-cov>=3.0",
]
doc = [
  "sphinx",
]

# [project.urls]
# source = "https://github.com/yoshanuikabundi/openff-pdbscan"
# documentation = "https://openff-pdbscan.readthedocs.io"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "openff/pdbscan/_tests",
]

[tool.setuptools.packages.find]
include = ["openff.*"]
